# Numerical-Integration

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Integrator.h  SimpsonRule.h  TrapezoidRule.h  helper.h
src/: CMakeLists.txt  Integrator.cpp  Integrator.h  SimpsonRule.cpp  TrapezoidRule.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
